removed sudo because it was uncessary and already has permission to run through {usermod -aG docker jenkins} and sudo is not in jenkins default docker image

--- a/custom_jenkins/Dockerfile
+++ b/custom_jenkins/Dockerfile
@@ -2,6 +2,17 @@
 # Use the Jenkins image as the base image
 FROM jenkins/jenkins:lts
 
+# the command : docker run -d --name jenkins-dind --privileged -p 8080:8080 -p 50000:50000 -v /var/run/docker.sock:/var/run/docker.sock -v jenkins_home:/var/jenkins_home jenkins-dind 
+# the -v /var/run/docker.sock:/var/run/docker.sock
+# actually just uses the host machine's docker daemon inside the container instead of installing docker inside the container
+# but we will install docker inside the container to use docker-in-docker (DinD)
+# this is because the docker client binary is needed to run docker commands inside the container
+# When you run a command like docker build inside your Jenkins container, the following happens:
+# The Jenkins job executes the docker build command.
+# The docker client binary inside the Jenkins container takes this command.
+# Because you mounted the host's docker.sock file, the client program sends the command to the Docker engine on the host machine.
+# The host's Docker engine then builds the image and creates a new container
+
 # Switch to root user to install dependencies
 # initially it is on user jenkins
 USER root
@@ -16,7 +27,7 @@ RUN apt-get update -y && \
     apt-get clean
 
 # Add Jenkins user to the Docker group (create if it doesn't exist)
-RUN groupadd -f docker && \
+RUN groupadd -g 959 -f docker && \
     usermod -aG docker jenkins
 
 # Create the Docker directory and volume for DinD
